--- a/index.html
+++ b/index.html
@@ -4,93 +4,139 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Berita</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
-    body{margin:0;font-family:'Poppins',sans-serif;background:#f9f9fb;color:#222;}
-    header{background:#fff;position:sticky;top:0;z-index:10;box-shadow:0 2px 4px rgba(0,0,0,0.05);}
-    header h1{margin:0;padding:1rem;font-size:1.2rem;}
-    main{max-width:960px;margin:auto;padding:1rem;}
-    .card{background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(0,0,0,.06);padding:1rem;margin-bottom:1rem;}
-    .thumb{max-height:180px;width:100%;object-fit:cover;border-radius:12px;}
-    .searchBox{margin:1rem 0;}
-    .searchBox input{width:100%;padding:.6rem;border:1px solid #ddd;border-radius:16px;}
+    :root {
+      --bg-light:#f9f9fb; --bg-dark:#121212;
+      --text-light:#222; --text-dark:#eee;
+      --card-light:#fff; --card-dark:#1e1e1e;
+      --accent:#f7b500;
+      --accent-gradient:linear-gradient(135deg,#ffd84d,#f7b500);
+    }
+    body {margin:0;font-family:'Poppins',sans-serif;background:var(--bg-light);color:var(--text-light);transition:.3s;}
+    body.dark {background:var(--bg-dark);color:var(--text-dark);}
+    header {display:flex;justify-content:space-between;align-items:center;padding:1rem 1.5rem;backdrop-filter:blur(12px);background:rgba(255,255,255,.7);position:sticky;top:0;z-index:100;border-bottom:1px solid rgba(0,0,0,.05);}
+    body.dark header{background:rgba(18,18,18,.8);border-bottom:1px solid rgba(255,255,255,.1);}
+    nav{display:flex;gap:.8rem;}
+    nav a{padding:.4rem 1rem;border-radius:12px;font-weight:500;text-decoration:none;color:inherit;}
+    nav a.active,nav a:hover{background:var(--accent);color:#000;}
+    .theme-toggle{position:fixed;top:12px;right:12px;z-index:2000;background:var(--card-light);border:none;border-radius:50%;width:40px;height:40px;font-size:1.2rem;cursor:pointer;display:flex;align-items:center;justify-content:center;box-shadow:0 2px 6px rgba(0,0,0,.2);}
+    body.dark .theme-toggle{background:var(--card-dark);color:#fff;}
+    main{padding:1.5rem;max-width:800px;margin:auto;}
+    .card{background:var(--card-light);margin-bottom:1.2rem;border-radius:18px;padding:1.2rem;box-shadow:0 4px 12px rgba(0,0,0,.05);}
+    body.dark .card{background:var(--card-dark);}
+    .card h2,.card h3{margin:.3rem 0;}
+    .date{font-size:.85rem;color:#777;margin-bottom:.6rem;} body.dark .date{color:#aaa;}
+    .btn{display:inline-block;padding:.55rem 1.2rem;border-radius:14px;background:var(--accent-gradient);color:#000;font-weight:600;cursor:pointer;text-decoration:none;box-shadow:0 4px 12px rgba(0,0,0,.25);transition:transform .2s;}
+    .btn:hover{transform:scale(1.05);}
+    .thumb{width:100%;max-height:180px;object-fit:cover;border-radius:12px;margin-bottom:.8rem;}
+    footer{text-align:center;padding:1rem;font-size:.9rem;opacity:.7;}
+    @media(max-width:768px){header{flex-direction:column;gap:.6rem;text-align:center;}nav{justify-content:center;gap:.4rem;}nav a{font-size:.8rem;padding:.3rem .6rem;border-radius:8px;}}
 
-    /* LOADING */
-    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.7);display:none;justify-content:center;align-items:center;z-index:2000;}
-    .spinner{width:40px;height:40px;border:4px solid #ddd;border-top:4px solid #f7b500;border-radius:50%;animation:spin 1s linear infinite;}
-    @keyframes spin{to{transform:rotate(360deg);}}
-
-    /* POPUP */
-    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:5000}
-    .fb01-overlay.active{display:flex}
-    .fb01-box{background:#fff;max-width:320px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;text-align:center;}
-    .fb01-box p{margin:0;font-size:14px}
-    .fb01-actions{margin-top:12px}
-    .fb01-btn{background:#f7b500;color:#000;border:none;padding:8px 14px;border-radius:10px;cursor:pointer;font-weight:600}
+    /* Loading Overlay */
+    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.85);display:none;flex-direction:column;align-items:center;justify-content:center;font-family:'Poppins',sans-serif;font-weight:500;color:#333;z-index:3000;}
+    body.dark #loadingOverlay{background:rgba(18,18,18,.85);color:#eee;}
+    .loader{border:4px solid #f3f3f3;border-top:4px solid var(--accent);border-radius:50%;width:40px;height:40px;animation:spin 1s linear infinite;margin-bottom:1rem;}
+    @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
   </style>
 </head>
 <body>
-  <header><h1>Portal Berita</h1></header>
+  <header>
+    <h2><a href="index.html" style="text-decoration:none;color:inherit;">Portal Berita</a></h2>
+    <nav>
+      <a href="#" class="active" data-tab="Berita">Berita</a>
+      <a href="#" data-tab="Pengumuman">Pengumuman</a>
+      <a href="#" data-tab="Peraturan">Peraturan</a>
+    </nav>
+  </header>
+
+  <button class="theme-toggle" id="themeToggle">☀️</button>
+
   <main>
-    <div class="searchBox"><input type="text" id="searchInput" placeholder="Cari berita..."></div>
-    <div id="posts"></div>
+    <div id="contentList"></div>
   </main>
 
-  <div id="loadingOverlay"><div class="spinner"></div></div>
+  <footer>Hak Cipta © 2025 Portal Berita</footer>
 
-  <!-- POPUP -->
-  <div id="fb01Popup" class="fb01-overlay"><div class="fb01-box">
-    <p id="fb01Msg"></p>
-    <div class="fb01-actions"><button class="fb01-btn" onclick="document.getElementById('fb01Popup').classList.remove('active')">OK</button></div>
-  </div></div>
+  <!-- Loading Overlay -->
+  <div id="loadingOverlay">
+    <div class="loader"></div>
+    <p>Memuat konten...</p>
+  </div>
 
+  <!-- Firebase + Firestore -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getFirestore, collection, getDocs, query, orderBy, where } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import { getFirestore, collection, getDocs, query, orderBy, where } 
+      from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-    const firebaseConfig={apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",authDomain:"portal-berita-firebase.firebaseapp.com",projectId:"portal-berita-firebase"};
-    const app=initializeApp(firebaseConfig);
-    const db=getFirestore(app);
+    // Firebase config (dari project kamu)
+    const firebaseConfig = {
+      apiKey: "AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
+      authDomain: "portal-berita-firebase.firebaseapp.com",
+      projectId: "portal-berita-firebase",
+      storageBucket: "portal-berita-firebase.firebasestorage.app",
+      messagingSenderId: "598254123187",
+      appId: "1:598254123187:web:9418bcbe0a00dda3c3d8c6",
+      measurementId: "G-FZKQG25PJW"
+    };
 
-    const postsDiv=document.getElementById("posts");
-    const searchInput=document.getElementById("searchInput");
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    function showLoading(on){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
-    function fb01Alert(msg){document.getElementById("fb01Msg").textContent=msg;document.getElementById("fb01Popup").classList.add("active");}
-
-    async function loadPosts(){
-      showLoading(true);
-      postsDiv.innerHTML="";
-      try{
-        let q=query(collection(db,"posts"),where("status","==","Aktif"),orderBy("createdAt","desc"));
-        const snap=await getDocs(q);
-        if(snap.empty){postsDiv.innerHTML="<p>Tidak ada data.</p>";}
-        snap.forEach(doc=>{
-          const d=doc.data();
-          const card=document.createElement("div");
-          card.className="card";
-          card.innerHTML=`
-            ${d.imageUrl?`<img src="${d.imageUrl}" class="thumb">`:""}
-            <h3>${d.title}</h3>
-            <p>${(d.content||"").substring(0,100)}...</p>
-            <a href="detail.html?slug=${d.slug}">Baca selengkapnya</a>
-          `;
-          postsDiv.appendChild(card);
-        });
-      }catch(e){fb01Alert("Gagal memuat data");}
-      showLoading(false);
+    const themeToggle=document.getElementById("themeToggle");
+    if(themeToggle){
+      themeToggle.addEventListener("click",()=>{
+        document.body.classList.toggle("dark");
+        localStorage.setItem("theme",document.body.classList.contains("dark")?"dark":"light");
+        themeToggle.textContent=document.body.classList.contains("dark")?"🌙":"☀️";
+      });
+      if(localStorage.getItem("theme")==="dark"){document.body.classList.add("dark");themeToggle.textContent="🌙";}
     }
 
-    searchInput.addEventListener("input",()=>{
-      const val=searchInput.value.toLowerCase();
-      [...postsDiv.children].forEach(c=>{
-        const t=c.querySelector("h3")?.textContent.toLowerCase()||"";
-        const p=c.querySelector("p")?.textContent.toLowerCase()||"";
-        c.style.display=(t.includes(val)||p.includes(val))?"block":"none";
+    function showLoading(){document.getElementById("loadingOverlay").style.display="flex";}
+    function hideLoading(){document.getElementById("loadingOverlay").style.display="none";}
+
+    async function loadPosts(category){
+      showLoading();
+      try {
+        const q = query(
+          collection(db, "posts"),
+          where("category", "==", category),
+          orderBy("createdAt", "desc")
+        );
+        const snap = await getDocs(q);
+        hideLoading();
+        const c = document.getElementById("contentList");
+        c.innerHTML = "";
+        if (snap.empty){c.innerHTML="<p>Tidak ada data.</p>";return;}
+        snap.forEach(doc=>{
+          const d = doc.data();
+          c.innerHTML += `
+            <div class="card">
+              ${d.imageUrl?`<img src="${d.imageUrl}" class="thumb">`:""}
+              <h3>${d.title}</h3>
+              <div class="date">${d.createdAt?.toDate().toLocaleDateString("id-ID")||""}</div>
+              <p>${d.content.substring(0,120)}...</p>
+              <a href="detail.html?id=${doc.id}" class="btn">Baca Selengkapnya</a>
+            </div>`;
+        });
+      } catch(err){
+        hideLoading();
+        alert("Gagal memuat data: "+err.message);
+      }
+    }
+
+    // Default load + nav
+    loadPosts("Berita");
+    document.querySelectorAll("nav a").forEach(a=>{
+      a.addEventListener("click",e=>{
+        e.preventDefault();
+        document.querySelectorAll("nav a").forEach(x=>x.classList.remove("active"));
+        a.classList.add("active");
+        loadPosts(a.dataset.tab);
       });
     });
-
-    loadPosts();
   </script>
 </body>
 </html>
