--- a/detail.html
+++ b/detail.html
@@ -4,77 +4,116 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Berita</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
-    body{margin:0;font-family:'Poppins',sans-serif;background:#f9f9fb;color:#222;}
-    header{background:#fff;position:sticky;top:0;z-index:10;box-shadow:0 2px 4px rgba(0,0,0,0.05);}
-    header h1{margin:0;padding:1rem;font-size:1.2rem;}
-    main{max-width:960px;margin:auto;padding:1rem;}
-    .detail-img{max-width:700px;max-height:400px;width:100%;object-fit:cover;border-radius:12px;margin-bottom:1rem;}
-    a.back{display:inline-block;margin-top:1rem;padding:.6rem 1rem;background:#f7b500;color:#000;border-radius:20px;text-decoration:none;font-weight:600;}
-
-    /* LOADING */
-    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.7);display:none;justify-content:center;align-items:center;z-index:2000;}
-    .spinner{width:40px;height:40px;border:4px solid #ddd;border-top:4px solid #f7b500;border-radius:50%;animation:spin 1s linear infinite;}
-    @keyframes spin{to{transform:rotate(360deg);}}
-
-    /* POPUP */
-    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:5000}
-    .fb01-overlay.active{display:flex}
-    .fb01-box{background:#fff;max-width:320px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;text-align:center;}
-    .fb01-box p{margin:0;font-size:14px}
-    .fb01-actions{margin-top:12px}
-    .fb01-btn{background:#f7b500;color:#000;border:none;padding:8px 14px;border-radius:10px;cursor:pointer;font-weight:600}
+    :root{--bg-light:#f9f9fb;--bg-dark:#121212;--text-light:#222;--text-dark:#eee;--card-light:#fff;--card-dark:#1e1e1e;--accent:#f7b500;--accent-gradient:linear-gradient(135deg,#ffd84d,#f7b500);}
+    body{margin:0;font-family:'Poppins',sans-serif;background:var(--bg-light);color:var(--text-light);transition:.3s;}
+    body.dark{background:var(--bg-dark);color:var(--text-dark);}
+    header{display:flex;justify-content:space-between;align-items:center;padding:1rem 1.5rem;backdrop-filter:blur(12px);background:rgba(255,255,255,.7);position:sticky;top:0;z-index:100;border-bottom:1px solid rgba(0,0,0,.05);}
+    body.dark header{background:rgba(18,18,18,.8);border-bottom:1px solid rgba(255,255,255,.1);}
+    .btn{display:inline-block;padding:.55rem 1.2rem;border-radius:14px;background:var(--accent-gradient);color:#000;font-weight:600;cursor:pointer;text-decoration:none;box-shadow:0 4px 12px rgba(0,0,0,.25);transition:transform .2s;}
+    .btn:hover{transform:scale(1.05);}
+    .theme-toggle{position:fixed;bottom:12px;left:12px;z-index:2000;background:var(--card-light);border:none;border-radius:50%;width:40px;height:40px;font-size:1.2rem;cursor:pointer;display:flex;align-items:center;justify-content:center;box-shadow:0 2px 6px rgba(0,0,0,.2);}
+    body.dark .theme-toggle{background:var(--card-dark);color:#fff;}
+    main{padding:1.5rem;max-width:800px;margin:auto;}
+    .card{background:var(--card-light);margin-bottom:1.2rem;border-radius:18px;padding:1.2rem;box-shadow:0 4px 12px rgba(0,0,0,.05);}
+    body.dark .card{background:var(--card-dark);}
+    .date{font-size:.85rem;color:#777;margin-bottom:.6rem;} body.dark .date{color:#aaa;}
+    .detail-img{width:100%;max-width:700px;max-height:400px;border-radius:12px;margin:1rem auto;display:block;object-fit:cover;cursor:zoom-in;}
+    footer{text-align:center;padding:1rem;font-size:.9rem;opacity:.7;}
+    #lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;justify-content:center;align-items:center;z-index:2000;}
+    #lightbox img{max-width:90%;max-height:90%;border-radius:8px;box-shadow:0 4px 20px rgba(0,0,0,.5);}
+    #closeBtn{position:absolute;top:20px;right:30px;font-size:2rem;font-weight:bold;color:#fff;cursor:pointer;z-index:2100;}
+    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.85);display:none;flex-direction:column;align-items:center;justify-content:center;font-family:'Poppins',sans-serif;font-weight:500;color:#333;z-index:3000;}
+    body.dark #loadingOverlay{background:rgba(18,18,18,.85);color:#eee;}
+    .loader{border:4px solid #f3f3f3;border-top:4px solid var(--accent);border-radius:50%;width:40px;height:40px;animation:spin 1s linear infinite;margin-bottom:1rem;}
+    @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
   </style>
 </head>
 <body>
-  <header><h1>Detail Berita</h1></header>
-  <main>
-    <h2 id="title"></h2>
-    <img id="img" class="detail-img hidden">
-    <p id="content"></p>
-    <a href="index.html" class="back">Kembali</a>
-  </main>
+  <header>
+    <h2><a href="index.html" style="text-decoration:none;color:inherit;">Portal Berita</a></h2>
+    <a href="javascript:history.back()" class="btn">Kembali</a>
+  </header>
 
-  <div id="loadingOverlay"><div class="spinner"></div></div>
+  <button class="theme-toggle" id="themeToggle">☀️</button>
 
-  <!-- POPUP -->
-  <div id="fb01Popup" class="fb01-overlay"><div class="fb01-box">
-    <p id="fb01Msg"></p>
-    <div class="fb01-actions"><button class="fb01-btn" onclick="document.getElementById('fb01Popup').classList.remove('active')">OK</button></div>
-  </div></div>
+  <main id="detailContainer"></main>
 
+  <footer>Hak Cipta © 2025 Portal Berita</footer>
+
+  <!-- Lightbox -->
+  <div id="lightbox" onclick="this.style.display='none'">
+    <span id="closeBtn" onclick="document.getElementById('lightbox').style.display='none'">&times;</span>
+    <img id="lightbox-img">
+  </div>
+
+  <!-- Loading Overlay -->
+  <div id="loadingOverlay">
+    <div class="loader"></div>
+    <p>Memuat konten...</p>
+  </div>
+
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import { getFirestore, doc, getDoc } 
+      from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-    const firebaseConfig={apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",authDomain:"portal-berita-firebase.firebaseapp.com",projectId:"portal-berita-firebase"};
-    const app=initializeApp(firebaseConfig);
-    const db=getFirestore(app);
+    const firebaseConfig = {
+      apiKey: "AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
+      authDomain: "portal-berita-firebase.firebaseapp.com",
+      projectId: "portal-berita-firebase",
+      storageBucket: "portal-berita-firebase.firebasestorage.app",
+      messagingSenderId: "598254123187",
+      appId: "1:598254123187:web:9418bcbe0a00dda3c3d8c6",
+      measurementId: "G-FZKQG25PJW"
+    };
 
-    const params=new URLSearchParams(window.location.search);
-    const slug=params.get("slug");
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    function showLoading(on){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
-    function fb01Alert(msg){document.getElementById("fb01Msg").textContent=msg;document.getElementById("fb01Popup").classList.add("active");}
+    const themeToggle=document.getElementById("themeToggle");
+    if(themeToggle){
+      themeToggle.addEventListener("click",()=>{
+        document.body.classList.toggle("dark");
+        localStorage.setItem("theme",document.body.classList.contains("dark")?"dark":"light");
+        themeToggle.textContent=document.body.classList.contains("dark")?"🌙":"☀️";
+      });
+      if(localStorage.getItem("theme")==="dark"){document.body.classList.add("dark");themeToggle.textContent="🌙";}
+    }
+
+    function showLoading(){document.getElementById("loadingOverlay").style.display="flex";}
+    function hideLoading(){document.getElementById("loadingOverlay").style.display="none";}
 
     async function loadDetail(){
-      showLoading(true);
-      try{
-        const q=query(collection(db,"posts"),where("slug","==",slug),where("status","==","Aktif"));
-        const snap=await getDocs(q);
-        if(snap.empty){fb01Alert("Konten tidak ditemukan");}
-        snap.forEach(doc=>{
-          const d=doc.data();
-          document.getElementById("title").textContent=d.title;
-          document.getElementById("content").textContent=d.content;
-          if(d.imageUrl){const img=document.getElementById("img");img.src=d.imageUrl;img.classList.remove("hidden");}
-        });
-      }catch(e){fb01Alert("Gagal memuat data");}
-      showLoading(false);
+      const id=new URLSearchParams(window.location.search).get("id");
+      if(!id){document.getElementById("detailContainer").innerHTML="❌ Tidak ada ID berita.";return;}
+      showLoading();
+      try {
+        const snap = await getDoc(doc(db,"posts",id));
+        hideLoading();
+        if(!snap.exists()){document.getElementById("detailContainer").innerHTML="❌ Berita tidak ditemukan.";return;}
+        const d = snap.data();
+        document.getElementById("detailContainer").innerHTML=`
+          <div class="card">
+            ${d.imageUrl?`<img src="${d.imageUrl}" class="detail-img" onclick="showLightbox(this.src)">`:""}
+            <h2>${d.title}</h2>
+            <div class="date">${d.createdAt?.toDate().toLocaleDateString("id-ID")||""}</div>
+            <p>${d.content.replace(/\n/g,"<br>")}</p>
+          </div>`;
+      } catch(err){
+        hideLoading();
+        alert("Gagal memuat detail: "+err.message);
+      }
     }
 
     loadDetail();
+
+    window.showLightbox=function(src){
+      document.getElementById('lightbox-img').src=src;
+      document.getElementById('lightbox').style.display='flex';
+    }
   </script>
 </body>
 </html>
